modify deploy yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ permissions:
     contents: read
     pages: write
     id-token: write
-
+    actions: read
 # 동시에 하나의 배포만 허용하도록 구성
 concurrency:
     group: 'pages'
